--- a/templates/base/css.html
+++ b/templates/base/css.html
@@ -1,12 +1,12 @@
 {% load static %}
 
 {# COMMENT: css/output.css comes from the tailwind output #}
-<link rel="stylesheet" href="{% static 'css/output.css' %}" />
+<link rel="stylesheet" href="{% static 'tailwind/output.css' %}" />
 
 
 
 
-{# COMMENT: vendor_css_files comes from micro_ecommerce.context_processors.vendor_files #}
-{#{% for css_file in vendor_css_files %}#}
-{#<link rel="stylesheet" href="{% static css_file %}">#}
-{#{% endfor %}#}
+{# COMMENT: vendor_css_files comes from micro_ecommerce.context_processors.vendor_files#}
+{% for css_file in vendor_css_files %}
+<link rel="stylesheet" href="{% static css_file %}">
+{% endfor %}
