--- a/templates/purchases/solicitud/solicitud_stripe_detail.html
+++ b/templates/purchases/solicitud/solicitud_stripe_detail.html
@@ -1,6 +1,33 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+    <style>
+    .card {
+    border: 1px solid #ccc;
+    padding: 8px;
+    margin-bottom: 8px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    width: 90%; /* Ajusta el ancho del card al 90% del contenedor */
+    max-width: 300px; /* Define el ancho máximo */
+    margin: 0 auto; /* Centra el card horizontalmente */
+    display: flex; /* Habilita flexbox para el card */
+    flex-direction: column; /* Ordena el contenido en columna */
+}
+
+.card h2 {
+    margin-top: 0;
+    font-weight: bold;
+}
+
+/* Estilos para pantallas pequeñas */
+@media (max-width: 480px) {
+    .card {
+        width: 100%; /* El card ocupa todo el ancho en pantallas pequeñas */
+    }
+}
+</style>
 <div class="bg-white shadow-md rounded-lg p-6">
   <h2 class="text-2xl font-bold mb-4">Pedido #{{ purchase.pk }}</h2>
   <p class="text-gray-600 mb-2">Usuario: {{ purchase.user.username }}</p>
@@ -24,5 +51,22 @@
 
   </ul>
 {% endif %}
+
+Destinatario:
+<ul id="destinatarios-list">
+    <li class="card" data-nombre="{{ purchase.destinatario.nombre|lower }}">
+        <div class="card-content">
+            <label for="destinatario-{{ purchase.destinatario.id }}">
+                <h2>{{ purchase.destinatario.nombre }} {{ purchase.destinatario.apellidos }}</h2>
+                <p>Teléfono: {{ purchase.destinatario.telefono }}</p>
+                <p>Carnet de Identidad: {{ purchase.destinatario.carnet_de_identidad }}</p>
+                <p>Correo Electrónico: {{ purchase.destinatario.correo_electronico }}</p>
+                <p>Dirección: {{ purchase.destinatario.direccion }}</p>
+                <p>Municipio: {{ purchase.destinatario.municipio }}</p>
+                <p>Instrucciones de Entrega: {{ purchase.destinatario.instrucciones_entrega }}</p>
+            </label>
+        </div>
+    </li>
+</ul>
 </div>
 {% endblock %}
