--- a/templates/base/css.html
+++ b/templates/base/css.html
@@ -1,7 +1,8 @@
 {% load static %}
 
 {# COMMENT: css/output.css comes from the tailwind output #}
-<link rel="stylesheet" href="{% static 'tailwind/output.css' %}" />
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 
 
