--- a/templates/products/list.html
+++ b/templates/products/list.html
@@ -2,7 +2,13 @@
 
 {% block content %}
 
-{% include 'products/prueba.html' with classifications=classifications %}
+{%load static%}
+
+
+
+
+
+{% include 'products/prueba2.html' with classifications=classifications %}
 
 <section class="bg-white dark:bg-gray-900">
     <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6 ">
