--- a/templates/products/prueba.html
+++ b/templates/products/prueba.html
@@ -1,46 +1,75 @@
-<form method="get" action="{% url 'products:list' %}" class="max-w-4xl mx-auto p-6 bg-white shadow-md rounded-lg">
-    <div class="flex items-center mb-4">
-        <label for="search" class="sr-only">Buscar productos</label>
-        <div class="relative w-full">
-            <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
-                <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+{%load static%}
+
+<form method="get" action="{% url 'products:list' %}" class="container mt-4 p-4 bg-white shadow rounded">
+    <div class="input-group mb-3">
+        <label for="search" class="visually-hidden">Buscar productos</label>
+        <div class="input-group-prepend">
+            <span class="input-group-text" id="search-addon">
+                <svg aria-hidden="true" class="w-5 h-5 text-gray-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
                 </svg>
-            </div>
-            <input type="text" id="search" name="search" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder:text-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Buscar productos">
+            </span>
         </div>
-        <button type="submit" class="py-2.5 px-5 ml-2 text-sm font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Buscar</button>
+        <input type="text" id="search" name="search" class="form-control" placeholder="Buscar productos" aria-label="Buscar productos" aria-describedby="search-addon">
+        <div class="input-group-append">
+            <button type="submit" class="btn btn-primary">Buscar</button>
+        </div>
     </div>
 
-    <div class="flex space-x-4 p-4 bg-gray-100 rounded-lg">
-        <ol class="inline-flex items-center space-x-1 md:space-x-3">
-            <div class="relative group">
-                <button type="submit" class="breadcrumb-link text-gray-700 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white mr-4" data-classification-id="{{ classification.id }}">
+
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="{% static 'img/1 Caffe.png' %}" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'img/1 Carne.png' %}" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'img/1 Frutas.png' %}" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+    
+
+    <div class="d-flex p-4 bg-light rounded-lg">
+        <ol class="breadcrumb mb-0">
+            <li class="breadcrumb-item">
+                <button type="submit" class="btn btn-link text-secondary" data-classification-id="{{ classification.id }}">
                     Todos
                 </button>
-            </div>
+            </li>
             {% for classification in classifications %}
             {% if not classification.parent %}
-            <div class="relative group">
-    <button type="submit" class="breadcrumb-link text-gray-700 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white mr-4" name="classification_id_padre" value="{{ classification.id }}" id="classification-{{ classification.id }}" onclick="handleClick(this, 'dropdown-{{ classification.id }}')">
-        {{ classification.nombre }}
-    </button>
-    <div class="absolute left-0 -top-12 hidden transition-opacity duration-300 ease-in-out" id="dropdown-{{ classification.id }}">
-        {% if classification.hijos.all %}
-        <div class="p-2 bg-white shadow-lg rounded-lg">
-            {% for child_classification in classification.hijos.all %}
-            {% if child_classification.pro.exists %}
-            <button type="submit" class="block px-4 py-2 text-gray-700 hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-700" name="classification_id" value="{{ child_classification.id }}" id="child-classification-{{ child_classification.id }}">
-                {{ child_classification.nombre }}
-            </button>
-            {% endif %}
-            {% endfor %}
-        </div>
-        {% endif %}
-    </div>
-</div>
+            <li class="breadcrumb-item dropdown">
+                <button type="button" class="btn btn-link text-secondary dropdown-toggle" name="classification_id_padre" value="{{ classification.id }}" id="classification-{{ classification.id }}" onclick="handleClick(this, 'dropdown-{{ classification.id }}')" aria-expanded="false">
+                    {{ classification.nombre }}
+                </button>
+                <div class="dropdown-menu" aria-labelledby="classification-{{ classification.id }}">
+                    {% if classification.hijos.all %}
+                    <div class="p-2">
+                        {% for child_classification in classification.hijos.all %}
+                        {% if child_classification.pro.exists %}
+                        <button type="submit" class="dropdown-item" name="classification_id" value="{{ child_classification.id }}" id="child-classification-{{ child_classification.id }}">
+                            {{ child_classification.nombre }}
+                        </button>
+                        {% endif %}
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                </div>
+            </li>
             {% if not forloop.last %}
-            <li>
+            <li class="breadcrumb-item">
                 <svg class="w-6 h-6 text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path>
                 </svg>
@@ -50,6 +79,7 @@
             {% endfor %}
         </ol>
     </div>
+    
 </form>
 
 <script>
